refactor: optimize MigrationRecordService filters and fix constructor